Bug fixed ZK-2899: Listbox's select mold issue on Firefox

--- a/zul/src/archive/web/js/zul/sel/less/listbox.less
+++ b/zul/src/archive/web/js/zul/sel/less/listbox.less
@@ -167,7 +167,9 @@
 				.verGradient(@meshContentHoverStart, @meshContentHoverEnd);
 			</c:if>
 			background-clip: padding-box;
+			<c:if test="${not (zk.ff > 0)}">
 			position: relative;
+			</c:if>
 
 			> .z-listcell-content {
 				color: @hoverColor;
